--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username, %><br />
+    <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
 
