--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,27 @@
 <h1>Index of Products</h1>
 <p>Space Monkey demands you add a new product <%= link_to 'here', new_product_path %></p>
-<ol>
-<% @products.each do |product| %>
-	<li>Name: <%= product.name %>  <%= link_to 'view', product_path(product) %>  <%= link_to 'edit', edit_product_path(product) %> <%= link_to 'delete', product_path(product), method: :delete %></li><ul>
-	<li>Description: <%= product.description %></li></ul>
-<% end %>
-</ol>
+
+<div class="container-fluid">
+	<ol><% @products.each do |product| %>
+		<div class="">
+			<li><%= link_to '#', class: "btn btn-default" do %>
+	    	<i class="glyphicon glyphicon-thumbs-up"></i>
+			<% end %>
+			Name: <%= product.name %>  
+								<%= link_to 'view', product_path(product) %>  
+								<%= link_to 'edit', edit_product_path(product) %> 
+								<%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
+								<%= link_to '#', class: "btn btn-default" do %>
+						    	<i class="glyphicon glyphicon-thumbs-up"></i>
+								<% end %>
+								<%= link_to '#', class: "btn btn-default" do %>
+									<i class="glyphicon glyphicon-thumbs-down"></i>
+								<% end %>
+			</li>
+			<ul>
+				<li>Description: <%= product.description %></li>
+		</div>
+			</ul>
+		<% end %>
+	</ol>
+</div>
