--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,12 +1,10 @@
-<%= bootstrap_form_for [@task] do |f| %>
+<%= bootstrap_form_for [@product, @review] do |f| %>
 
   <%= f.text_field :title %>
 
-  <%= f.text_area :description %>
+  <%= f.text_area :desription %>
 
-  <%= f.date_field :product %>
-
-  <%= f.check_box :user %>
+  <%= f.text_field :product %>
 
 	<%= f.submit %>
 <% end %>
