--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,7 @@
 			<li><%= link_to '#', class: "btn btn-default" do %>
 	    	<i class="glyphicon glyphicon-thumbs-up"></i>
 			<% end %>
+      Score: <%= product.get_score(product) %>
 			Name: <%= product.name %>  
 								<%= link_to 'view', product_path(product) %>  
 								<%= link_to 'edit', edit_product_path(product) %> 
