--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,7 @@
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <% if current_user %>
+              <li><%= link_to current_user.username, profile_path %></li>
               <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
               <li><%= link_to 'Edit Account', edit_user_registration_path %></li>
             <% else %>
