added user authentication to reviews

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,17 @@
 
 <p><%= link_to 'back', products_path %></p>
 
+<h2>Reviews</h2>
 <% @product.reviews.each do |review| %>
+  <h3>Title</h3>
   <%= review.title %>
+  <h3>Description</h3>
   <%= review.description %>
+  <% if user_signed_in? %>
+    <p><%= link_to 'edit', edit_product_review_path(@product, review) %></p>
+    <p><%= link_to 'Delete', product_review_path(@product, review), method: :delete, data: { confirm: 'Are you sure?' }%></p>
+  <% end %>
 <% end %>
+
+<p><%= link_to 'new review', new_product_review_path(@product)%></p>
+
