--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,9 +2,7 @@
 
   <%= f.text_field :title %>
 
-  <%= f.text_area :desription %>
-
-  <%= f.text_field :product %>
+  <%= f.text_area :description %>
 
 	<%= f.submit %>
 <% end %>
