updated navbar with home and profile link

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container page-top">
     <nav>
+    <%= link_to 'Space Monkey', root_path, class: "navbar-brand"  %>
       <ul class="nav navbar-nav pull-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle nav-text" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -12,7 +13,7 @@
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <% if current_user %>
-              <li><%= link_to current_user.username, profile_path %></li>
+              <li><%= link_to 'Profile', profile_path %></li>
               <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
               <li><%= link_to 'Edit Account', edit_user_registration_path %></li>
             <% else %>
