--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,28 @@
-<h1><%= @product.name %></h1>
-<p><%= @product.description %></p>
+<div class= "pager container-fluid">
+  <h1><%= @product.name %></h1>
+  <p><%= @product.description %></p>
+  <div class="row">
+    <div class="col-md-2 col-md-offset-5">
+    <%= link_to 'back', products_path, class: "btn btn-primary btn-lg btn-block" %>
+    <%= link_to 'new review', new_product_review_path(@product), class: "btn btn-primary btn-lg btn-block"%>
+    </div>
+  </div>
 
-<p><%= link_to 'back', products_path %></p>
-
-<h2>Reviews</h2>
-<% @product.reviews.each do |review| %>
-  <h3>Title</h3>
-  <%= review.title %>
-  <h3>Description</h3>
-  <%= review.description %>
-  <% if user_signed_in? %>
-    <p><%= link_to 'edit', edit_product_review_path(@product, review) %></p>
-    <p><%= link_to 'Delete', product_review_path(@product, review), method: :delete, data: { confirm: 'Are you sure?' }%></p>
-  <% end %>
-<% end %>
-
-<p><%= link_to 'new review', new_product_review_path(@product)%></p>
-
+  <div class="container-fluid">
+	  <h2>Reviews</h2>
+	  <% @product.reviews.each do |review| %>
+	    <div class="pager border_pager">
+	      <h3>Title</h3>
+	      <%= review.title %>
+	      <h3>Description</h3>
+	      <%= review.description %>
+	      <% if user_signed_in? %>
+	        <p><%= link_to 'edit', edit_product_review_path(@product, review) %></p>
+	        <p><%= link_to 'Delete', product_review_path(@product, review), method: :delete, data: { confirm: 'Are you sure?' }%></p>
+	      <% end %>
+	    </div>
+	  <% end %>
+		
+  </div>
+	
+</div>
