--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,10 +18,10 @@
                   <%= link_to 'view', product_path(product) %>  
                   <%= link_to 'edit', edit_product_path(product) %> 
                   <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
-                  <%= link_to '#', class: "btn btn-default" do %>
+                  <%= link_to vote_up_path(product: product), class: "btn btn-default" do %>
                     <i class="glyphicon glyphicon-thumbs-up"></i>
                   <% end %>
-                  <%= link_to '#', class: "btn btn-default" do %>
+                  <%= link_to vote_down_path(product: product), class: "btn btn-default" do %>
                     <i class="glyphicon glyphicon-thumbs-down"></i>
                   <% end %>
         </div>
