--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar  navbar-inverse">
   <div class="container page-top">
     <nav>
     <%= link_to 'Space Monkey', root_path, class: "navbar-brand"  %>
