--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,8 +16,10 @@
         Score: <%= get_score(product) %>
         Name: <%= product.name %>  
                   <%= link_to 'view', product_path(product) %>  
-                  <%= link_to 'edit', edit_product_path(product) %> 
-                  <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
+                  <% if current_user.id == product.users_id %>
+                    <%= link_to 'edit', edit_product_path(product) %> 
+                    <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
+                  <% end %>
                   <%= link_to vote_up_path(product: product), class: "btn btn-default" do %>
                     <i class="glyphicon glyphicon-thumbs-up"></i>
                   <% end %>
