--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,23 +10,20 @@
   <div class="container-fluid">
     <div><% @products.each do |product| %>
       <div class="pager border_pager">
-        <div><%= link_to '#', class: "btn btn-default" do %>
-          <i class="glyphicon glyphicon-thumbs-up"></i>
-        <% end %>
-        Score: <%= get_score(product) %>
-        Name: <%= product.name %>  
+        <div> Name: <%= product.name %> </div>
+          <div class="description_padding">Description: <%= product.description %></div>
                   <%= link_to 'view', product_path(product) %>  
                   <%= link_to 'edit', edit_product_path(product) %> 
                   <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
                   <%= link_to vote_up_path(product: product), class: "btn btn-default" do %>
                     <i class="glyphicon glyphicon-thumbs-up"></i>
                   <% end %>
+                  <%= get_score(product) %>
                   <%= link_to vote_down_path(product: product), class: "btn btn-default" do %>
                     <i class="glyphicon glyphicon-thumbs-down"></i>
                   <% end %>
         </div>
         <div>
-          <div class="description_padding">Description: <%= product.description %></div>
       </div>
         </div>
       <% end %>
