--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,22 +12,23 @@
       <div class="pager border_pager">
         <div> Name: <%= product.name %> </div>
           <div class="description_padding">Description: <%= product.description %></div>
-        <div><%= link_to '#', class: "btn btn-default" do %>
-          <i class="glyphicon glyphicon-thumbs-up"></i>
-        <% end %>
         Score: <%= product.get_score %>
         Name: <%= product.name %>  
                   <%= link_to 'view', product_path(product) %>  
-                  <% if current_user.id == product.users_id %>
-                    <%= link_to 'edit', edit_product_path(product) %> 
-                    <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
+                  <% if current_user %>
+                    <% if current_user.id == product.users_id || 0 %>
+                      <%= link_to 'edit', edit_product_path(product) %> 
+                      <%= link_to 'delete', product_path(product), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %>  
+                    <% end %>
                   <% end %>
-                  <%= link_to vote_up_path(product: product), class: "btn btn-default" do %>
-                    <i class="glyphicon glyphicon-thumbs-up"></i>
-                  <% end %>
-                  <%= get_score(product) %>
-                  <%= link_to vote_down_path(product: product), class: "btn btn-default" do %>
-                    <i class="glyphicon glyphicon-thumbs-down"></i>
+                  <% if current_user %>
+                    <%= link_to vote_up_path(product: product), class: "btn btn-default" do %>
+                      <i class="glyphicon glyphicon-thumbs-up"></i>
+                    <% end %>
+                    <%= get_score(product) %>
+                    <%= link_to vote_down_path(product: product), class: "btn btn-default" do %>
+                      <i class="glyphicon glyphicon-thumbs-down"></i>
+                    <% end %>
                   <% end %>
         </div>
         <div>
